Changed authors, styles, and fixed fullscreen

--- a/GraphGen.html
+++ b/GraphGen.html
@@ -47,7 +47,7 @@
                 <button id='view9' title='Scale graphs to fit 9 graphs in the space'>
                     <img src='disable9g.png'>
                 </button>
-                <button id = 'snap' title='Snap to increments when moving graph windows'>
+                <button id = 'snap' title='Snap to increments when moving graph windows. Works only when 4 graph view or 9 graph view is enabled.'>
                     <img src = "disablesnap.png">
                 </button>
             </h3>
