Generating random graph functionality

--- a/GraphGen.html
+++ b/GraphGen.html
@@ -29,6 +29,13 @@
                 <input type='checkbox' id='weighted' checked>Weighted
                 <br>
                 <button id='generateGraph' onclick='addGraph()'>Generate Graph</button>
+                <div class = 'randomIP'>
+                    Vertex count: &nbsp;
+                    <input type="text" id="numNodes" placeholder="Number of vertices" value="10"> &ensp;
+                    Edge count: &nbsp;
+                    <input type="text" id="numEdges" placeholder="Number of edges" value="20">
+                </div>
+                <button id='generateRandomGraph'>Generate random Graph</button>
             </div>
             <div id='graphList' class='graphList'></div>
         </div>
