--- a/GraphGen.html
+++ b/GraphGen.html
@@ -15,33 +15,49 @@
 
 <body>
     <div class='container'>
-        <div class='graphGenerator'>
+        <div class='graphGenerator' id = 'graphGenerator'>
             <h1 id='instructions'>Arx Net
                 <button id='about' title='About this application'><img src='about.png'></button>
+                <button id='createGraphMenu' title='Show/hide create graph menu'><img src = 'sidebarclose.png'></button>
             </h1>
-            <div class='sourceInput'>
+            <div class='sourceInput' id = 'sourceInput'>
                 <input type='text' id='graphName' placeholder='Graph name (Can be left blank)'> <br>
                 <input type='text' id='edges' placeholder='E.g., AB5, 12-3.14, (B_C_-2.71)' autocomplete='off'
                     spellcheck='false'
-                    value='AB7, BA9, AC5, AD3, BC4, BE6, CD2, CF8, DE5, DG7, EF3, EH4, FG6, FI7, GH2, HI5, HJ9, IJ4' style="text-transform: uppercase;">
+                    value='AB7, AA6, BA9, AC5, AD3, BC4, BE6, CD2, CF8, DE5, DG7, EE2, EF3, EH4, FG6, FI7, GH2, HI5, HJ9, IJ4'
+                    
+                    style="text-transform: uppercase;">
                 <br>
-                <input type='checkbox' id='directed' checked>Directed
+                <input type='checkbox' id='directed' onchange="updateMinMax()" checked>Directed <br>
                 <input type='checkbox' id='weighted' checked>Weighted
                 <br>
                 <button id='generateGraph' onclick='addGraph()'>Generate Graph</button>
-                <div class = 'randomIP'>
-                    Vertex count: &nbsp;
-                    <input type="text" id="numNodes" placeholder="Number of vertices" value="10" onchange="updateMinMax()"> &ensp;
-                    Edge count: &nbsp;
-                    <input type="text" id="numEdges" placeholder="Number of edges" value="20">
+                <div class="input-row">
+                    <label for="numNodes">Vertex count:</label>
+                    <input type="text" id="numNodes" placeholder="Number of vertices" value="10"
+                        onchange="updateMinMax()">
+
+                    <label for="numEdges">Edge count:</label>
+                    <input type="text" id="numEdges" placeholder="Number of edges" value="34">
                 </div>
-                <p id = 'minMaxRec'>
+
+                <div class="input-row">
+                    <label for="minWeight">Min weight:</label>
+                    <input type="text" id="minWeight" placeholder="Minimum weight" value="1" onchange="updateMinMax()">
+
+                    <label for="maxWeight">Max weight:</label>
+                    <input type="text" id="maxWeight" placeholder="Maximum weight" value="20">
+                </div>
+                <input type='checkbox' id='connectedGraph'>Connected<br>
+                <input type='checkbox' id='selfLoops' onchange="updateMinMax()">Self loops (Multigraph) <br>
+                <input type='checkbox' id='duplicateEdges' onchange="updateMinMax()">Duplicate edges (Multigraph)
+                <br>
+                <p id='minMaxRec'>
                     <!-- Minimum recommended edge count</span> for vertex count: <b id = 'minRec' style = 'color: #ffc66d;'> 9 </b> <br> -->
-                    Max edge count for current vertex count: <b id = 'maxRec' style = 'color: #ffc66d;'> 45 </b>
+                    Max edge count for current vertex count: <b id='maxRec' style='color: #ffc66d;'> 90 </b>
                 </p>
                 <button id='generateRandomGraph'>Generate random Graph</button>
             </div>
-            <div id='graphList' class='graphList'></div>
         </div>
         <hr style='color: #ccc;'>
         <div class='outliner'>
@@ -101,8 +117,8 @@
         <font style="color: #ffc66d; font-weight: bold;">Graph window controls:</font>
         <ul>
             <li>Use the Left mouse button to interact with the vertices and edges.</li>
-            <li>Use the middle mouse button to pan the graph view.</li>
-            <li>Use the scroll wheel to zoom in and out of the graph.</li>
+            <li>Use the middle mouse button (or Ctrl + LMB) to pan the graph view.</li>
+            <li>Use the scroll wheel (or pinch) to zoom in and out of the graph.</li>
             <li>Right clicking on the window or the graph elements will toggle a menu with options corresponding
                 to that element.</li>
             <li>Double clicking on the window will re-center the graph based on your current view.</li>
