Refactored image locations

--- a/GraphGen.html
+++ b/GraphGen.html
@@ -17,8 +17,8 @@
     <div class='container'>
         <div class='graphGenerator' id='graphGenerator'>
             <h1 id='instructions'>Arx Net
-                <button id='about' title='About this application'><img src='about.png'></button>
-                <button id='createGraphMenu' title='Show/hide create graph menu'><img src='sidebarclose.png'></button>
+                <button id='about' title='About this application'><img src='images/about.png'></button>
+                <button id='createGraphMenu' title='Show/hide create graph menu'><img src='images/sidebarclose.png'></button>
             </h1>
             <div class='sourceInput' id='sourceInput'>
                 <input type='text' id='graphName' placeholder='Graph name (Can be left blank)'> <br>
@@ -66,20 +66,20 @@
             <div class='allGraphControls'>
                 <b style="margin-right: 20px; font-size: larger;">Graphs</b>
                 <button id='view4' title='Scale graphs to fit 4 graphs in the space'>
-                    <img src='disable4g.png'>
+                    <img src='images/disable4g.png'>
                 </button>
                 <button id='view9' title='Scale graphs to fit 9 graphs in the space'>
-                    <img src='disable9g.png'>
+                    <img src='images/disable9g.png'>
                 </button>
                 <button id='snap'
                     title='Snap to increments when moving graph windows. Works only when 4 graph view or 9 graph view is enabled.'>
-                    <img src="disablesnap.png">
+                    <img src="images/disablesnap.png">
                 </button>
                 <button id='showHideAll' title='Minimize/Maximize all graphs'>
-                    <img src='show.png'>
+                    <img src='images/show.png'>
                 </button>
                 <button id='clearAll' title='Delete all graphs'>
-                    <img src='delete.png'>
+                    <img src='images/delete.png'>
                 </button>
             </div>
 
