Deleted unused lines. Made styles much more readable, consistent and organized. Styles for graph now have to be changed in styles.css.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Arx Net</title>
-    <link rel='stylesheet' href='innerGraphStyle.css'>
-    <link rel='stylesheet' href='HTMLstyles.css'>
-    <!-- <link rel='stylesheet' href='s.css'> -->
-    <!-- <link rel='stylesheet' href='GraphWindowStyle.css'> -->
+    <link rel='stylesheet' href='styles.css'>
     <script src='D3.js'></script> <!--D3 library contains the necessary elements to generate and manipulate graphs -->
     <!-- <script src='graphMethods.js'></script> Contains implementation of commonly used graph methods -->
 </head>
@@ -18,13 +15,12 @@
         <div class='graphGenerator' id='graphGenerator'>
             <h1 id='instructions'>Arx Net
                 <button id='about' title='About this application'><img src='images/about.png'></button>
-                <button id='createGraphMenu' title='Show/hide create graph menu'><img src='images/sidebarclose.png'></button>
+                <button id='createGraphMenu' title='Show/hide create graph menu'><img
+                        src='images/sidebarclose.png'></button>
             </h1>
             <div class='sourceInput' id='sourceInput'>
                 <input type='text' id='graphName' placeholder='Graph name (Can be left blank)'> <br>
-                <input type='text' id='vertices'
-                    placeholder='E.G., A, B, C'
-                    style="text-transform: uppercase;"> <br>
+                <input type='text' id='vertices' placeholder='E.G., A, B, C' style="text-transform: uppercase;"> <br>
                 <input type='text' id='edges' placeholder='E.G., AB5, 12-3.14, (B_C_-2.71)' autocomplete='off'
                     spellcheck='false'
                     value='AB7, AA6, BA9, AC5, AD3, BC4, BE6, CD2, CF8, DE5, DG7, EE2, EF3, EH4, FG6, FI7, GH2, HI5, HJ9, IJ4'
@@ -55,7 +51,6 @@
                 <input type='checkbox' id='duplicateEdges' onchange="updateMinMax()">Duplicate edges (Multigraph)
                 <br>
                 <p id='minMaxRec'>
-                    <!-- Minimum recommended edge count</span> for vertex count: <b id = 'minRec' style = 'color: #ffc66d;'> 9 </b> <br> -->
                     Max edge count for current vertex count: <b id='maxRec' style='color: #ffc66d;'> 90 </b>
                 </p>
                 <button id='generateRandomGraph'>Generate random Graph</button>
@@ -63,35 +58,31 @@
         </div>
         <hr style='color: #ccc;'>
         <div class='outliner'>
-            <div class='allGraphControls'>
-                <b style="margin-right: 20px; font-size: larger;">Graphs</b>
-                <button id='view4' title='Scale graphs to fit 4 graphs in the space'>
-                    <img src='images/disable4g.png'>
-                </button>
-                <button id='view9' title='Scale graphs to fit 9 graphs in the space'>
-                    <img src='images/disable9g.png'>
-                </button>
-                <button id='snap'
-                    title='Snap to increments when moving graph windows. Works only when 4 graph view or 9 graph view is enabled.'>
-                    <img src="images/disablesnap.png">
-                </button>
-                <button id='showHideAll' title='Minimize/Maximize all graphs'>
-                    <img src='images/show.png'>
-                </button>
-                <button id='clearAll' title='Delete all graphs'>
-                    <img src='images/delete.png'>
-                </button>
-            </div>
-
+            <b style="margin-right: 20px; font-size: larger;">Graphs</b>
+            <button id='view4' title='Scale graphs to fit 4 graphs in the space'>
+                <img src='images/disable4g.png'>
+            </button>
+            <button id='view9' title='Scale graphs to fit 9 graphs in the space'>
+                <img src='images/disable9g.png'>
+            </button>
+            <button id='snap'
+                title='Snap to increments when moving graph windows. Works only when 4 graph view or 9 graph view is enabled.'>
+                <img src="images/disablesnap.png">
+            </button>
+            <button id='showHideAll' title='Minimize/Maximize all graphs'>
+                <img src='images/show.png'>
+            </button>
+            <button id='clearAll' title='Delete all graphs'>
+                <img src='images/delete.png'>
+            </button>
         </div>
     </div>
-    <div id='aboutDiv'>
+    <div class='aboutDiv' id='aboutDiv'>
         <font style="color: #ffc66d; font-weight: bold; font-size:x-large;">Arx Net guide</font>
         <p>
             This section provides guidance on how to use the Arx Net application effectively. To know about how the
             application works, please refer to the documentation.
         </p>
-
 
         <font style="color: #ffc66d; font-weight: bold;">Graph Generation:</font>
         <ul>
