Created files to separate logic based on functionality.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Arx Net</title>
     <link rel='stylesheet' href='styles.css'>
-    <script src='D3.js'></script> <!--D3 library contains the necessary elements to generate and manipulate graphs -->
 </head>
 
 <body>
@@ -14,7 +13,7 @@
         <div class='graphGenerator' id='graphGenerator'>
             <h1 id='instructions'>Arx Net
                 <button id='about' title='About this application'><img src='images/about.png'></button>
-                <button id='createGraphMenu' title='Show/hide create graph menu'><img
+                <button id='createGraphButton' title='Show/hide create graph menu'><img
                         src='images/sidebarclose.png'></button>
             </h1>
             <div class='sourceInput' id='sourceInput'>
@@ -119,11 +118,12 @@
         Click anywhere outside this window to close the guide.
     </div>
 </body>
-<script>
-    const outliner = document.querySelector('.outliner');
-    const graphGenerator = document.querySelector('.graphGenerator');
-    const containerAll = document.querySelector('.container');
-</script>
+<script src='D3.js'></script> <!--D3 library contains the necessary elements to generate and manipulate graphs -->
+<script src='globals.js'></script>
+<script src = 'container-functions.js'></script>
+<script src = 'svg-functions.js'></script>
+<script src = 'grid-render.js'></script>
+<script src='graph-util-functions.js'></script>
 <script src='non-graph.js'></script>
 <script src='graph-layout-manager.js'></script>
 <script src='algorithms.js'></script>
